--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="#prose">Prose</a></li>
                         <li class="nav-item"><a class="nav-link" href="#vocabulary">Vocabulary</a></li>
-                        <li class="nav-item"><a class="nav-link" href="html/resume.html">Resume</a>
+                        <li class="nav-item"><a class="nav-link" href="html/resume.html">Resume</a></li>
                         <li class="nav-item"><a class="nav-link" href="#signup">Contact</a></li>
                     </ul>
                 </div>
