--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="#prose">Prose</a></li>
                         <li class="nav-item"><a class="nav-link" href="#vocabulary">Vocabulary</a></li>
-                        <li class="nav-item"><a class="nav-link" href="html/resume.html">Resume</a></li>
                         <li class="nav-item"><a class="nav-link" href="#signup">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="html/resume.html">Resume</a></li>
                     </ul>
                 </div>
             </div>
@@ -73,8 +73,8 @@
                     <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/bg-masthead.jpg" alt="..." /></div>
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
-                            <h4>Shoreline</h4>
-                            <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
+                            <h4>Succinct, yet mysterious...</h4>
+                            <p class="text-black-50 mb-0">Sephiroth speaks in a way that is brief, yet vague. Ask as many leading and rhetorical questions as possible. Use as little conjunctions or run-on sentences as possible.</p>
                         </div>
                     </div>
                 </div>
@@ -85,8 +85,8 @@
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-left">
-                                    <h4 class="text-white">Misty</h4>
-                                    <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else, along with a description.</p>
+                                    <h4 class="text-white">Old Meets New</h4>
+                                    <p class="mb-0 text-white-50">Sephiroth blends modern English with old English vocabulary. If you sound like a poor reading of the King James Version, you are doing something right.</p>
                                 </div>
                             </div>
                         </div>
@@ -99,8 +99,8 @@
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-right">
-                                    <h4 class="text-white">Mountains</h4>
-                                    <p class="mb-0 text-white-50">Another example of a project with its respective description. These sections work well responsively as well!</p>
+                                    <h4 class="text-white">Common Replacements</h4>
+                                    <p class="mb-0 text-white-50">Yes = Indeed<br>Idiot = Fool<br>Maybe = Perhaps<br>Love = Cherish</p>
                                 </div>
                             </div>
                         </div>
