--- a/html/resume.html
+++ b/html/resume.html
@@ -9,7 +9,7 @@ Section 2
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Resume</title>
-    <link rel="stylesheet" href="../styles/styles.css">
+    <link rel="stylesheet" href="../styles/mystyles.css">
     <link rel="stylesheet" href="../styles/layoutstyles.css">
 </head>
 <body>
