--- a/html/resume.html
+++ b/html/resume.html
@@ -14,11 +14,9 @@ Section 2
 </head>
 <body>
     <div class="common header">
-        <img src="../images/mdhclarinet.webp" height="95" alt="Matheson Hovi playing the clarinet">
+        <img src="../assets/img/shadow.png" height="200" alt="Shadow the Hedgehog">
     <span class="subheader">
-        <a href="../index.html" id="top">Home</a> |
-        <a href="#">Resume</a> |
-        <a href="aboutme.html">About Me</a><br><br>
+        <a href="../index.html" id="top">Home</a>
     </span>
     </div>
     <div class="common leftmenu">
