--- a/html/resume.html
+++ b/html/resume.html
@@ -13,10 +13,10 @@ Section 2
     <link rel="stylesheet" href="../styles/layoutstyles.css">
 </head>
 <body>
-    <div class="common header">
+    <div class="header">
         <img src="../assets/img/shadow.png" height="200" alt="Shadow the Hedgehog">
     <span class="subheader">
-        <a href="../index.html" id="top">Home</a>
+        <a class="bold underline italics" href="../index.html" id="top">Home</a>
     </span>
     </div>
     <div class="common leftmenu">
@@ -70,14 +70,13 @@ Section 2
                 <p>&nbsp;</p>
                 <p>&nbsp;</p>
                 <p>&nbsp;</p>
-                <a href="#top">Back to Top</a>
                 <p>&nbsp;</p>
                 <p>&nbsp;</p>
 
             </li>
         </ol>
     </div>
-    <div class="common rightmenu">
+    <div>
         <h4>Matheson Hovi</h4>
 
         College Student <br>
@@ -86,9 +85,7 @@ Section 2
         <p>
             Go to Twitter: <a href="https://twitter.com/home" target="_blank" title="Twitter Home Page">Twitter.com</a>
         </p> Demonstration.
-    </div>
-    <div class="common footer">
-        www.mdhthegoat.com | $copy; | Matheson Hovi
+        <a href="#top">Back to Top</a>
     </div>
 
 </body>
