--- a/html/resume.html
+++ b/html/resume.html
@@ -8,9 +8,8 @@ Section 2
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Resume</title>
+    <title>Resume</title>
     <link rel="stylesheet" href="../styles/mystyles.css">
-    <link rel="stylesheet" href="../styles/layoutstyles.css">
 </head>
 <body>
     <div class="header">
