--- a/html/resume.html
+++ b/html/resume.html
@@ -12,11 +12,9 @@ Section 2
     <link rel="stylesheet" href="../styles/mystyles.css">
 </head>
 <body>
+    <img src="../assets/img/shadow.png" height="200" alt="Shadow the Hedgehog">
     <div class="header">
-        <img src="../assets/img/shadow.png" height="200" alt="Shadow the Hedgehog">
-    <span class="subheader">
-        <a class="bold underline italics" href="../index.html" id="top">Home</a>
-    </span>
+        <a href="../index.html" id="top">Home</a>
     </div>
     <div class="common leftmenu">
         <a href="#edu">Education</a><br>
