--- a/html/resume.html
+++ b/html/resume.html
@@ -22,18 +22,24 @@ Section 2
         <a href="#ski">Skills</a><br>
     </div>
     <div class="common mainbody">
-        <p class="justify"><span class="bold">Mission Statement:</span>  My goal is to become the God Emperor of America. My goal is to become the God Emperor of America. My goal is to become the God Emperor of America. My goal is to become the God Emperor of America. My goal is to become the God Emperor of America. My goal is to become the God Emperor of America. My goal is to become the God Emperor of America. My goal is to become the God Emperor of America. My goal is to become the God Emperor of America. My goal is to become the God Emperor of America. My goal is to become the God Emperor of America. My goal is to become the God Emperor of America. My goal is to become the God Emperor of America. My goal is to become the God Emperor of America. My goal is to become the God Emperor of America. My goal is to become the God Emperor of America. My goal is to become the God Emperor of America. My goal is to become the God Emperor of America.</p>
+        <p class="justify"><span class="bold">CAREER OBJECTIVE</span>My interest in life is to be able to have enough money to support myself and my future children. I have no intention on being impoverished or ever lacking the funds to do what is necessary. I am looking into a degree in Accountancy, an MBA, and a CPA.</p>
         <ol>
-            <li id="edu" class="resumeListHeading underline">Education
+            <li id="edu" class="resumeListHeading underline">EDUCATION
                 <ul>
-                    <li>Brigham Young University</li>
-                    <li>Herriman High School</li>
+                    <li>Brigham Young University - Studying Accountancy</li>
+                    <li>Herriman High School - High School Diploma</li>
                 </ul>
             </li>
-            <li id="exp" class="resumeListHeading">Experience
+            <li id="exp" class="resumeListHeading">WORK/INTERNSHIP EXPERIENCE
                 <ul>
-                    <li>School</li>
-                    <li>Sigma incel chad</li>
+                    <ol>
+                        <li> Mc'Donalds - Crew Member
+                            <ul>
+                                <li>Grew employee morale by 15% when I clocked in.</li>
+                                <li>Increased customer satisfaction by 200% whenever I clocked in.</li>
+                            </ul> 
+                        <li>BYU Student Employee</li>
+                    </ol>
                 </ul>
             </li>
             <li id="ski" class="resumeListHeading">Skills
