--- a/html/resume.html
+++ b/html/resume.html
@@ -21,9 +21,9 @@ Section 2
         <a href="#exp">Experience</a><br>
         <a href="#ski">Skills</a><br>
     </div>
-    <div class="common mainbody">
-        <p class="justify"><span class="bold">CAREER OBJECTIVE</span>My interest in life is to be able to have enough money to support myself and my future children. I have no intention on being impoverished or ever lacking the funds to do what is necessary. I am looking into a degree in Accountancy, an MBA, and a CPA.</p>
-        <ol>
+    <div>
+        <p class="justify"><span class="bold">CAREER OBJECTIVE<br></span>My interest in life is to be able to have enough money to support myself and my future children. I have no intention on being impoverished or ever lacking the funds to do what is necessary. I am looking into a degree in Accountancy, an MBA, and a CPA.</p>
+        <div>
             <li id="edu" class="resumeListHeading underline">EDUCATION
                 <ul>
                     <li>Brigham Young University - Studying Accountancy</li>
@@ -77,7 +77,7 @@ Section 2
                 <p>&nbsp;</p>
 
             </li>
-        </ol>
+        </div>
     </div>
     <div>
         <h4>Matheson Hovi</h4>
