--- a/html/resume.html
+++ b/html/resume.html
@@ -16,7 +16,7 @@ Section 2
     <div class="header">
         <a href="../index.html" id="top">Home</a>
     </div>
-    <div class="common leftmenu">
+    <div>
         <a href="#edu">Education</a><br>
         <a href="#exp">Experience</a><br>
         <a href="#ski">Skills</a><br>
@@ -24,13 +24,13 @@ Section 2
     <div>
         <p class="justify"><span class="bold">CAREER OBJECTIVE<br></span>My interest in life is to be able to have enough money to support myself and my future children. I have no intention on being impoverished or ever lacking the funds to do what is necessary. I am looking into a degree in Accountancy, an MBA, and a CPA.</p>
         <div>
-            <li id="edu" class="resumeListHeading underline">EDUCATION
+            <div id="edu" class="bold">EDUCATION
                 <ul>
                     <li>Brigham Young University - Studying Accountancy</li>
                     <li>Herriman High School - High School Diploma</li>
                 </ul>
-            </li>
-            <li id="exp" class="resumeListHeading">WORK/INTERNSHIP EXPERIENCE
+            </div>
+            <div id="exp" class="bold">WORK/INTERNSHIP EXPERIENCE
                 <ul>
                     <ol>
                         <li> Mc'Donalds - Crew Member
@@ -41,8 +41,8 @@ Section 2
                         <li>BYU Student Employee</li>
                     </ol>
                 </ul>
-            </li>
-            <li id="ski" class="resumeListHeading">Skills
+            </div>
+            <div id="ski" class="bold">Skills
                 <ul>
                     <li>Database design development</li>
                     <li>Entity-Relationship Diagramming</li>
@@ -76,12 +76,11 @@ Section 2
                 <p>&nbsp;</p>
                 <p>&nbsp;</p>
 
-            </li>
+            </div>
         </div>
     </div>
     <div>
-        <h4>Matheson Hovi</h4>
-
+        <p class="bold">Matheson Hovi<br></p>
         College Student <br>
         Brigham Young University <br>
         Provo, Utah, 84604
