--- a/html/resume.html
+++ b/html/resume.html
@@ -23,61 +23,60 @@ Section 2
     </div>
     <div>
         <p class="justify"><span class="bold">CAREER OBJECTIVE<br></span>My interest in life is to be able to have enough money to support myself and my future children. I have no intention on being impoverished or ever lacking the funds to do what is necessary. I am looking into a degree in Accountancy, an MBA, and a CPA.</p>
-        <div>
-            <div id="edu" class="bold">EDUCATION
-                <ul>
-                    <li>Brigham Young University - Studying Accountancy</li>
-                    <li>Herriman High School - High School Diploma</li>
-                </ul>
-            </div>
-            <div id="exp" class="bold">WORK/INTERNSHIP EXPERIENCE
-                <ul>
-                    <ol>
-                        <li> Mc'Donalds - Crew Member
-                            <ul>
+    <div>
+        <p id="edu" class="bold">EDUCATION
+            <ul>
+                <li>Brigham Young University - Studying Accountancy</li>
+                <li>Herriman High School - High School Diploma</li>
+            </ul>
+        </p>
+        <p id="exp" class="bold">WORK/INTERNSHIP EXPERIENCE
+            <ul>
+                <ol>
+                    <li> Mc'Donalds - Crew Member
+                        <ul>
                                 <li>Grew employee morale by 15% when I clocked in.</li>
-                                <li>Increased customer satisfaction by 200% whenever I clocked in.</li>
-                            </ul> 
-                        <li>BYU Student Employee</li>
-                    </ol>
+                            <li>Increased customer satisfaction by 200% whenever I clocked in.</li>
+                        </ul> 
+                    <li>BYU Student Employee</li>
+                </ol>
+            </ul>
+        </p>
+        <div id="ski" class="bold">Skills
+            <ul>
+                <li>Database design development</li>
+                <li>Entity-Relationship Diagramming</li>
+                <li>Structured Query Language</li>
+                <li>Tableau</li>
+                <li>Excel Solver, Pivot Tables, and Charts</li>
+                <li>HTML, CSS, Bootstrap</li>
+                <li>Flow Chart Diagramming</li>
+                <li>Visual Basic for Applications (VBA) Programming in Excel</li>
                 </ul>
-            </div>
-            <div id="ski" class="bold">Skills
-                <ul>
-                    <li>Database design development</li>
-                    <li>Entity-Relationship Diagramming</li>
-                    <li>Structured Query Language</li>
-                    <li>Tableau</li>
-                    <li>Excel Solver, Pivot Tables, and Charts</li>
-                    <li>HTML, CSS, Bootstrap</li>
-                    <li>Flow Chart Diagramming</li>
-                    <li>Visual Basic for Applications (VBA) Programming in Excel</li>
-                </ul>
-                <p>&nbsp;</p>
-                <p>&nbsp;</p>
-                <p>&nbsp;</p>
-                <p>&nbsp;</p>
-                <p>&nbsp;</p>
-                <p>&nbsp;</p>
-                <p>&nbsp;</p>
-                <p>&nbsp;</p>
-                <p>&nbsp;</p>
-                <p>&nbsp;</p>
-                <p>&nbsp;</p>
-                <p>&nbsp;</p>
-                <p>&nbsp;</p>
-                <p>&nbsp;</p>
-                <p>&nbsp;</p>
-                <p>&nbsp;</p>
-                <p>&nbsp;</p>
-                <p>&nbsp;</p>
-                <p>&nbsp;</p>
-                <p>&nbsp;</p>
-                <p>&nbsp;</p>
-                <p>&nbsp;</p>
-
-            </div>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
         </div>
+    </div>
     </div>
     <div>
         <p class="bold">Matheson Hovi<br></p>
