--- a/html/resume.html
+++ b/html/resume.html
@@ -42,7 +42,8 @@ Section 2
                 </ol>
             </ul>
         </p>
-        <div id="ski" class="bold">Skills
+        <div> 
+            <p id="ski" class="bold">Skills</p>
             <ul>
                 <li>Database design development</li>
                 <li>Entity-Relationship Diagramming</li>
