--- a/html/resume.html
+++ b/html/resume.html
@@ -16,14 +16,14 @@ Section 2
     <div class="header">
         <a href="../index.html" id="top">Home</a>
     </div>
-    <div>
-        <a href="#edu">Education</a><br>
-        <a href="#exp">Experience</a><br>
-        <a href="#ski">Skills</a><br>
+    <div class="header">
+        <a href="#edu">EDUCATION</a> | 
+        <a href="#exp">EXPERIENCE</a> | 
+        <a href="#ski">SKILLS</a><br>
     </div>
     <div>
         <p class="justify"><span class="bold">CAREER OBJECTIVE<br></span>My interest in life is to be able to have enough money to support myself and my future children. I have no intention on being impoverished or ever lacking the funds to do what is necessary. I am looking into a degree in Accountancy, an MBA, and a CPA.</p>
-    <div>
+    <div class="mainstyl">
         <p id="edu" class="bold">EDUCATION
             <ul>
                 <li>Brigham Young University - Studying Accountancy</li>
@@ -35,15 +35,19 @@ Section 2
                 <ol>
                     <li> Mc'Donalds - Crew Member
                         <ul>
-                                <li>Grew employee morale by 15% when I clocked in.</li>
+                            <li>Grew employee morale by 15% when I clocked in.</li>
                             <li>Increased customer satisfaction by 200% whenever I clocked in.</li>
                         </ul> 
                     <li>BYU Student Employee</li>
+                        <ul>
+                            <li>Increased cleanlines by 5% when I locked in.</li>
+                            <li>Technically a manager.</li>
+                        </ul>
                 </ol>
             </ul>
         </p>
         <div> 
-            <p id="ski" class="bold">Skills</p>
+            <p id="ski" class="bold">SKILLS</p>
             <ul>
                 <li>Database design development</li>
                 <li>Entity-Relationship Diagramming</li>
