--- a/html/resume.html
+++ b/html/resume.html
@@ -16,7 +16,7 @@ Section 2
     <div class="header">
         <a href="../index.html" id="top">Home</a>
     </div>
-    <div class="header">
+    <div class="header2">
         <a href="#edu">EDUCATION</a> | 
         <a href="#exp">EXPERIENCE</a> | 
         <a href="#ski">SKILLS</a><br>
