--- a/html/resume.html
+++ b/html/resume.html
@@ -63,9 +63,7 @@ Section 2
             <p>&nbsp;</p>
             <p>&nbsp;</p>
             <p>&nbsp;</p>
-            <iframe class="header" width="420" height="315"
-            src="https://www.youtube.com/watch?v=qjlVAsvQLM8">
-            </iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/qjlVAsvQLM8?si=Z6fwIiy-oYsWBQmr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <p>&nbsp;</p>
             <p>&nbsp;</p>
             <p>&nbsp;</p>
