--- a/html/resume.html
+++ b/html/resume.html
@@ -14,7 +14,7 @@ Section 2
 <body>
     <img src="../assets/img/shadow.png" height="200" alt="Shadow the Hedgehog">
     <div class="header">
-        <a href="../index.html" id="top">Home</a>
+        <a href="../index.html" id="top">HOME PAGE</a>
     </div>
     <div class="header2">
         <a href="#edu">EDUCATION</a> | 
