--- a/html/resume.html
+++ b/html/resume.html
@@ -16,6 +16,7 @@ Section 2
     <div class="header">
         <a href="../index.html" id="top">HOME PAGE</a>
     </div>
+    <br>
     <div class="header2">
         <a href="#edu">EDUCATION</a> | 
         <a href="#exp">EXPERIENCE</a> | 
@@ -73,7 +74,7 @@ Section 2
         <p class="bold">Matheson Hovi<br></p>
         College Student <br>
         Brigham Young University <br>
-        Provo, Utah, 84604
+        Provo, Utah, 84604 <br>
         <a href="#top">Back to Top</a>
     </div>
 </body>
